Código real do projeto

--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -1,1 +1,7 @@
-// Conteúdo de exemplo para render.yaml
+services:
+  - type: web
+    name: crm-backend
+    runtime: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port 10000"
+    plan: free
